<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/StateCurTempLayout"
            android:padding="10dp">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/system_current_temperature"
                android:id="@+id/textCurTemp"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/valueholder"
                android:id="@+id/textCurTempValue"
                android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/StateCurOutsideTempLayout"
            android:padding="10dp">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/system_current_outdoor_temperature"
                android:id="@+id/textCurOutsideTemp"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/valueholder"
                android:id="@+id/textCurOutsideTempValue"
                android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/StateCurHumidityLayout"
            android:padding="10dp">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/system_current_humidity"
                android:id="@+id/textCurHumidity"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/valueholder"
                android:id="@+id/textCurHumidityValue"
                android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/StateCurWaterTempLayout"
            android:padding="10dp">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/climate_water_temperature"
                android:id="@+id/textCurWaterTemp"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/valueholder"
                android:id="@+id/textCurWaterTempValue"
                android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/StateCurVoltageLayout"
            android:padding="10dp">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/system_current_voltage"
                android:id="@+id/textCurVoltage"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/valueholder"
                android:id="@+id/textCurVoltageValue"
                android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/SystemStateLayout"
            android:padding="10dp">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/system_current_state"
                android:id="@+id/textSystemState"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/valueholder"
                android:id="@+id/textSystemStateValue"
                android:layout_alignParentRight="true"/>
    </RelativeLayout>
</LinearLayout>