<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/StateCurTempLayout"
            android:padding="6dp"
            android:clickable="true" >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/system_title"
                android:id="@+id/textAboutTitle"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/valueholder"
                android:id="@+id/textAboutTitleVal"
                android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/StateCurOutsideTempLayout"
            android:padding="6dp"
            android:clickable="true">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/system_version"
                android:id="@+id/textAboutApiVer"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/valueholder"
                android:id="@+id/textAboutApiVerVal"
                android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/StateCurHumidityLayout"
            android:padding="6dp"
            android:clickable="true">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/system_api_version"
                android:id="@+id/textAboutAndrVer"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/valueholder"
                android:id="@+id/textAboutAndrVerVal"
                android:layout_alignParentRight="true"/>
    </RelativeLayout>

</LinearLayout>